@@ -90,29 +90,6 @@ sub depends
     return \@names;
 }
 
-# Method: appArmorProfiles
-#
-#   Overrides to set the own AppArmor profile
-#
-# Overrides:
-#
-#   <EBox::Module::Base::appArmorProfiles>
-#
-sub appArmorProfiles
-{
-    my ($self) = @_;
-
-    EBox::info('Setting mysqld apparmor profile');
-    return [
-        {
-         'binary' => 'usr.sbin.mysqld',
-         'local'  => 1,
-         'file'   => 'core/apparmor-mysqld.local.mas',
-         'params' => [],
-        }
-    ];
-}
-
 sub _daemons
 {
     return [
