@@ -27,6 +27,7 @@
 	+ Fix some warnings in log
 	+ Fix error in send crash report script
 	+ Remove all maintenance functionality except logs
+	+ Remove no longer needed apparmor custom profile for mysqld
 3.5.1
 	+ Fixed dashboard links to official manual
 	+ Model backup/revoke/save files are no longer called implicitly
